Fix product status layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -526,16 +526,17 @@ body::before {
   }
 }
 
+.product-status-wrapper {
+  display: flex;
+  justify-content: start;
+}
+
 .product-status {
   padding: 4px 8px;
-  display: inline-flex;
-  align-items: center; /* Ensures vertical alignment of children */
-  gap: 4px;
   border-radius: var(--border-radius-button);
-  order: 2;
   font-weight: 500;
-  margin-bottom: 8px;
   font-family: var(--current-font);
+  margin-bottom: -12px;
 }
 
 .released-product {
@@ -584,7 +585,6 @@ body::before {
   font-size: 36px;
   font-weight: 600;
   line-height: 1;
-  order: 1;
   font-family: var(--current-font);
   letter-spacing: var(--product-list-letter-spacing);
 }
@@ -660,7 +660,6 @@ body::before {
   cursor: pointer;
   border-radius: 9999px;
   transition: var(--transition-time);
-  order: -1;
   align-self: end;
   flex-shrink: 0;
   margin-top: 24px;
